<resources>
    <string name="app_name">时光猫</string>
    <string name="ali_feedback_key">24780800</string>
    <string name="ali_feedback_key_secret">92115fc47a770e62b571c1cfe7c47a3d</string>
    <string name="unread_feed_back">有%s条未读回复反馈，点击查看</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="feed_back">反馈</string>
    <string name="setting">设置</string>
    <string name="copyed">已复制</string>
    <string name="toast_tip_content">如果触发Time Cat异常，可以切换"增强型监控"设置查看效果。</string>
    <string name="no_internet_for_fenci">网络异常，使用本地分词</string>
    <string name="try_long_click_text">请试着长按上方文字</string>
    <string name="request_accessibility_confirm">前往设置</string>
    <string name="timecat_open">Time Cat 功能已打开</string>
    <string name="timecat_close">Time Cat 功能已关闭</string>
    <string name="open_timecat_for_translate">翻译功能开启Time Cat即可体验</string>
    <string name="sort_mode_help">排序模式\n通过拖动改变词句的排列\n再次点击则返回选词模式</string>
    <string name="click_to_see_function">选择文本后\n请点击功能按钮查看介绍\n请确保您掌握了每个功能</string>
    <string name="share_request_confirm_dislike">当然！</string>
    <string name="only_text">增强型监控(可能误触)</string>
    <string name="white_list">设置触发方式</string>
    <string name="share_mode_help">分享\n将选择的词句分享到其他APP</string>
    <string name="monitor_clipboard">监控剪贴板</string>
    <string name="problem_content">\t\t\t如果本产品出现一些使用异常，包括监控不工作，或者悬浮球或通知栏经常消失，程序经常被清理，请先确保您已经将本产品添加到了手机管家的清理白名单中，并允许自启动。</string>
    <string name="stringValue1">Time Cat 是您的快捷助手，您可以在任意app中一步创建笔记或日程，对文字进行编辑，包括分词，翻译，复制以及动态调整，希望您能在日常生活中获得便利</string>
    <string name="copy_mode_help">复制\n将选择的词句复制到剪贴板</string>
    <string name="remain_symbol">显示符号</string>
    <string name="choose_sentences_mode">选词模式\n通过滑动和点击来选择词句进行操作</string>
    <string name="stringValue2">开启 Time Cat 之旅</string>
    <string name="stringValue3">从图库中选取图片识别</string>
    <string name="stringValue4">拍照识别</string>
    <string name="stringValue5">重新识别</string>
    <string name="stringValue6">送你最高效的时光喵~</string>
    <string name="timecat_copyright">Copyright ©2018 Time Cat. All Rights Reserved</string>
    <string name="share_request_confirm_like">当然！</string>
    <string name="stringValue9">翻译结果</string>
    <string name="sorry_for_parse_fail">抱歉，解析失败</string>
    <string name="ocr_picture">从图片中识别</string>
    <string name="problems">程序工作不正常？</string>
    <string name="perm_tip">缺少运行所需权限。\n请点击"设置"-"权限"-打开权限。\n再点击两次后退按钮返回本页。</string>
    <string name="monitor_click">监控点击/长按</string>
    <string name="monitor_click_into">需要开启辅助服务，在一些比较奇葩的应用中可能无法使用</string>
    <string name="setting_timecat">设置Time Cat样式</string>
    <string name="setting_timecat_intro">您可以调节爆炸出的文字的间距，大小，背景等</string>
    <string name="setting_search_engine">设置默认搜索引擎</string>
    <string name="setting_search_engine_into">您可以设置，添加内置浏览器使用的默认搜索引擎</string>
    <string name="share_request_cancel">无感…</string>
    <string name="share_request_msg">您喜欢本应用吗？</string>
    <string name="search_mode_help">搜索\n将选中的词句通过默认浏览器进行搜索</string>
    <string name="try_click_text">请点击或滑动上方文字</string>
    <string name="share_request_cancel_like">算了吧…</string>
    <string name="accessibility_des">打开右上角开关，在弹出的对话框中点击 `确认`。\n\n开启后，即可在微信，QQ等应用聊天页面中点击或长按文字聊天气泡，然后就会打开 Time Cat 页面。\n\n 此功能完全不需要root您的手机。只需您打开服务，弹窗提示您的授权时，点击确认便可。</string>
    <string name="ok">我知道了</string>
    <string name="translate_mode_help">翻译\n使用有道词典进行中英互译</string>
    <string name="introduction">如何使用</string>
    <string name="double_click_intercal">双击间隔#毫秒\t\t\t\t\t\t\t\t\t点击修改</string>
    <string name="double_click_intercal_hint">太长易误触，太短会与微信自身冲突</string>
    <string name="share_request_confirm">喜欢！</string>
    <string name="ask_again">请给予应用必要权限，让程序可正常工作。</string>
    <string name="share_request_msg_dislike">愿意给我们一些建议吗？</string>
    <string name="share_request_msg_like">愿意分享给您的朋友吗？</string>
    <string name="about_content">\t\t本产品是在开源项目https://github.com/l465659833/Bigbang的基础上进行设计开发的，旨在提供简单高效的任务管理和时间管理功能，帮用户省时间省脑力！\n\t\t本产品中的部分内容来自网络和其他开源组件，如有侵犯到您的版权，请联系我进行修改，谢谢！\n\t\t\t如果您对本产品有任何意见或建议，欢迎反馈。\n\n版本号：%1$s</string>
    <string name="donate">我请作者吃辣条</string>
    <string name="donate_now">点击跳转支付宝</string>
    <string name="join_qq">点击加入内测群（601215164）</string>
    <string name="confirm">确认</string>
    <string name="share_request_cancel_dislike">算了吧...</string>
    <string name="snackbar_net_error">连接网络失败，请稍后再试</string>
    <string name="check_update">检测更新</string>
    <string name="show_float_view">悬浮球常驻(自动靠边隐藏)</string>
    <string name="show_float_view_request">悬浮球包含多个功能入口，建议开启！</string>
    <string name="check_update_close">已是最新版本</string>
    <string name="default_setting">恢复默认设置</string>
    <string name="punish_float_problem">悬浮球功能已开启!</string>
    <string name="punish_float_action">悬浮球不显示？点击设置</string>
    <string name="open_setting_failed_diy">无法打开系统设置，请手动设置</string>
    <string name="setting_text_size">字体大小：</string>
    <string name="setting_line_margin">行间距：</string>
    <string name="setting_item_margin">块间距：</string>
    <string name="setting_item_padding">块内边距：</string>
    <string name="setting_alpha_percent">不透明度：</string>
    <string name="use_app_browser">使用内置浏览器</string>
    <string name="title_white_list">白名单</string>
    <string name="system_app">系统应用</string>
    <string name="user_app">第三方应用</string>
    <string name="search">搜索</string>
    <string name="white_list_tip">此处设置不影响复制触发功能</string>
    <string name="ocr_recognize">Ocr识别中</string>
    <string name="action_copy">"复制"</string>
    <string name="action_full_screen">"全屏选择"</string>
    <string name="action_select_mode">"查看已选"</string>
    <string name="error_in_copy">出现错误，请重试</string>
    <string name="error_in_permission">请给开启辅助模式，可长按悬浮球设置</string>
    <string name="copy_title">全局复制</string>
    <string name="copy_subtitle">请点击想要复制的区域</string>
    <string name="not_foud_qq">未找到QQ</string>
    <string name="my_zhifubao">我的支付宝二维码</string>
    <string name="my_weixin">我的微信二维码</string>
    <string name="thinks_for_donate">有您的支持，我们会越做越好的，欢迎加群(601215164)，给我们提建议</string>
    <string name="picture_saved">二维码已保存到本地相册</string>
    <string name="click_to_save_qrcord">点击二维码保存到相册</string>
    <string name="share">分享到朋友圈</string>
    <string name="share_">分享</string>
    <string name="save_">保存</string>
    <string name="ocr_">识别</string>
    <string name="copy_">复制</string>
    <string name="timecat_">炸词</string>
    <string name="translate">翻译</string>
    <string name="drag_select_mode">框选模式</string>
    <string name="drag_select_mode_done">非框选模式</string>
    <string name="drag_mode">拖动排序</string>
    <string name="drag_mode_done">退出拖动排序</string>
    <string name="online_segment">在线分词</string>
    <string name="offline_segment">离线分词</string>
    <string name="no_symbol">不显示符号</string>
    <string name="select_other">反选</string>
    <string name="remain_section">保留分段</string>
    <string name="no_section">不保留分段</string>
    <string name="open_timecat">关闭分词</string>
    <string name="close_timecat">开启分词</string>
    <string name="float_view_hide">时光猫悬浮窗（隐藏状态）</string>
    <string name="float_view">展开悬浮窗功能</string>
    <string name="float_view_to_hide">收起悬浮窗</string>
    <string name="share_content">Time Cat，不止是日历！更是您的高效助手！单击、双击、长按、复制等多种分词触发方式随心选！更有全局复制，图片识别等黑科技加持，给你的手机插上翅膀！\n\n
苦苦寻觅一款高效又高逼格的管理事务/办公软件？\n想添加TO DO LIST又懒得切换页面再打开app？\n总是忙到忘记TO DO LIST？\n\n来找时光猫“玩耍”就对了！贴心时光猫，陪您度过高效时光！\n\n

    ★“多”触即发，随时随地添加信息，懒癌福音！微信，qq，浏览器甚至桌面……小巧可爱的悬浮窗在手，您手机上任何地方都能简单快捷地添加任务，笔记等信息\n
    ★“复制文字就能分词？”是的！不仅仅是分词，还可以直接搜索、翻译选中内容，更多精彩高效的功能等你来发现！\n
    ★简洁精致的日历桌面小部件，为您清晰展示TO DO LIST，麻麻再也不用担心我忘记接下来要做什么啦~\n
    ★拥有对用户友好的设置教程和使用教程，手把手教您使用高效管理信息的时光猫的正确姿势~\n
    ★界面简洁而富有个性，可个性化设置界面显示效果，定能让您爱不释手~\n\n

    Time Cat时光猫，送你最高效的时光喵~</string>
    <string name="share_no_wechat">你还没有安装微信</string>
    <string name="share_error">分享失败</string>
    <string name="screen_capture_fail">抱歉，截屏失败</string>
    <string name="word_type_cloud">云端分词\n把常见的词字组合在一起，有网络时默认启用</string>
    <string name="word_type_local">本地分词\n把每一个字都拆分开，无网络时备选</string>
    <string name="show_symbol">是否显示符号</string>
    <string name="show_section">是否保持原段落\n开启时，段首的文字颜色加深，复制时保持分段状态</string>
    <string name="show_drag_selection">框选模式\n选框内的词的选中状态由第一个选中的词决定</string>
    <string name="recognize">识别中...</string>
    <string name="click_show_timecat">点击炸开文字</string>
    <string name="monitor_setting_card">点击触发相关设置</string>
    <string name="donate_title">一分也是情</string>
    <string name="total_switch">使用服务</string>
    <string name="too_short_to_split">文字长度小于2，不分词</string>
    <string name="float_tips">单击悬浮球切换开关，长按悬浮打开设置页。</string>
    <string name="access_open_tips">监控单击/长按需要开启辅助功能，请在设置中开启！</string>
    <string name="ocr_quote_beyond_time">\t\t非常抱歉，由于我们使用的是第三方付费OCR服务，作者每月需要为此支付数千元的费用。\n\t\t为了用户体验，本应用一直不愿接入广告，而热心用户的捐赠也有限，现已无力承担此费用.\n\t\t为了您的使用体验，麻烦您花几分钟时间进行设置，以继续免费使用OCR服务！</string>
    <string name="free_use">如何免费使用OCR</string>
    <string name="ocr_useup_toast">"我们的OCR限额即将耗尽，请查看设置页“免费设置OCR秘钥”"</string>
    <string name="notify_total_switch_on">启用\n服务</string>
    <string name="notify_total_switch_off">停用\n\n服务</string>
    <string name="notify_monitor_click_on">监控点击</string>
    <string name="notify_monitor_click_off">停用\n点击</string>
    <string name="notify_monitor_clipboard_on">监控\n复制</string>
    <string name="notify_monitor_clipboard_off">停用\n复制</string>
    <string name="notify_copy_title">全局\n复制</string>
    <string name="notify_srceen_cap">截屏\nOCR</string>
    <string name="open_total_switch_first">请先点击第一项"使用服务"</string>
    <string name="monitor_click_open">开始监控点击</string>
    <string name="monitor_click_close">停止监控点击</string>
    <string name="monitor_clipboard_open">开始监控复制</string>
    <string name="open_access_setting">进入系统辅助服务设置</string>
    <string name="open_access_hint">进程被杀或手机重启以后，需要重新开启辅助服务，建议您将该应用放到清理白名单</string>
    <string name="open_voice_setting">设置辅助应用程序</string>
    <string name="open_voice_hint">设置完成后，请尝试能否通过长按Home键呼出菜单，如果不能，则该功能在您的手机上无效，请关闭该项设置。</string>
    <string name="pomodoro_setting_card_title">番茄界面相关设置</string>
    <string name="auto_open">自动开启辅助服务</string>
    <string name="auto_open_hint">需要Root权限，如果频繁提示权限，可以到SuperSU中设置</string>
    <string name="main_menu_today">今天</string>
    <string name="main_menu_more">更多</string>
    <string name="main_menu_change_theme">改变效果</string>
    <string name="label_not_important_not_urgent">不重要不紧急</string>
    <string name="label_not_important_urgent">紧急不重要</string>
    <string name="label_important_not_urgent">重要不紧急</string>
    <string name="label_important_urgent">重要且紧急</string>
    <string name="title_schedules">日程</string>
    <string name="title_routines">生物钟</string>
    <string name="title_plans">计划</string>
    <string name="title_notes">笔记</string>
    <string name="main_menu_refresh_schedule">立即刷新</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="add_button">Add Button</string>
    <string name="refresh_button">Refresh Button</string>
    <string name="menu_item_search">搜索</string>
    <string name="menu_item_sort">排序</string>
    <string name="menu_item_undo">撤销</string>
    <string name="menu_item_redo">恢复</string>
    <string name="menu_item_preview">预览</string>
    <string name="menu_item_save">保存</string>
    <string name="menu_item_rename">重命名</string>
    <string name="menu_item_delete">删除</string>
    <string name="menu_item_clear_all">清除所有</string>
    <string name="menu_item_docs">Markdown 语法</string>
    <string name="menu_item_statistics">统计</string>
    <string name="pref_title_pomodoro_mode">番茄模式</string>
    <string name="pref_title_pomodoro_mode_summary">在番茄模式下不能暂停定时器</string>
    <string name="pref_title_infinity_mode">自动模式</string>
    <string name="pref_title_infinity_mode_summary">自动开始下一个番茄钟</string>
    <string name="pref_title_ticking_sound">滴答声</string>
    <string name="pref_title_ticking_sound_summary">在番茄钟工作期间，持续的滴答声</string>
    <string name="pref_title_use_notification">完成后提示</string>
</resources>