<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/content_view"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/goto_access_rl"
        style="@style/hintTextViewRelativeLayoutSelector"
        android:duplicateParentState="false">

        <com.time.cat.mvp.view.HintTextView
            style="@style/hintTextViewInLayoutLeft"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            app:hint="@string/open_access_hint"
            app:hintTextColor="@color/text_color_import"
            app:msg="@string/open_access_setting"
            />


    </RelativeLayout>


    <RelativeLayout
        style="@style/hintTextViewRelativeLayoutSelector"
        android:duplicateParentState="false"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider"/>

        <com.time.cat.mvp.view.HintTextView
            style="@style/hintTextViewInLayoutLeft"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            app:hint="@string/open_voice_hint"
            app:hintTextColor="@color/secondary_text"
            app:msg="@string/open_voice_setting"
            />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/auto_open_rl"
        style="@style/hintTextViewRelativeLayoutSelector"
        android:duplicateParentState="false">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider"/>

        <com.time.cat.mvp.view.HintTextView
            style="@style/hintTextViewInLayoutLeft"
            app:hint="@string/auto_open_hint"
            app:msg="@string/auto_open"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/auto_open_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>


</LinearLayout>