<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/main_menu_schedulesFragment"
        android:visible="true">
        <item
            android:id="@+id/main_menu_today"
            android:icon="@drawable/ic_today_white_24dp"
            android:title="@string/main_menu_today"
            android:visible="false"
            app:showAsAction="ifRoom"/>
        <!--<item-->
            <!--android:id="@+id/main_menu_change_theme"-->
            <!--android:icon="@drawable/ic_change_white_24dp"-->
            <!--android:title="@string/main_menu_change_theme"-->
            <!--android:visible="true"-->
            <!--app:showAsAction="ifRoom"/>-->
        <item
            android:id="@+id/main_menu_refresh_schedule"
            android:icon="@drawable/ic_autorenew_white_24dp"
            android:title="@string/main_menu_refresh_schedule"
            app:showAsAction="always"/>
        <item
            android:id="@+id/main_menu_schedule_help"
            android:icon="@drawable/ic_help_white_48dp"
            android:title="@string/main_menu_more"
            app:showAsAction="always"/>
    </group>
    <group
        android:id="@+id/main_menu_routinesFragment"
        android:visible="false">
        <item
            android:id="@+id/main_menu_1"
            android:icon="@drawable/ic_alarm_white_48dp"
            android:title="@string/main_menu_change_theme"
            android:visible="false"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/main_menu_refresh_routine"
            android:icon="@drawable/ic_autorenew_white_24dp"
            android:title="@string/main_menu_refresh_schedule"
            app:showAsAction="always"/>
        <item
            android:id="@+id/main_menu_routines_help"
            android:icon="@drawable/ic_help_white_48dp"
            android:title="@string/main_menu_more"
            app:showAsAction="always"/>
    </group>
    <group
        android:id="@+id/main_menu_notesFragment"
        android:visible="false">
        <item
            android:id="@+id/main_menu_note_refresh"
            android:icon="@drawable/ic_autorenew_white_24dp"
            android:title="@string/main_menu_refresh_schedule"
            android:visible="false"
            app:showAsAction="ifRoom"/>
    </group>
    <group
        android:id="@+id/main_menu_plansFragment"
        android:visible="false">
        <item
            android:id="@+id/main_menu_plan_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/menu_item_search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView"/>
        <item
            android:id="@+id/main_menu_plan_sort"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_sort_white_24dp"
            android:title="@string/menu_item_sort"/>
    </group>


</menu>