<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/add_task_select_ll_important_urgent"
              android:layout_width="match_parent"
              android:maxHeight="@dimen/dimen_150dp"
              android:padding="10dp"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:layout_weight="1"
        android:background="@color/white"
        android:paddingVertical="3dp"
        android:text="@string/label_important_urgent"
        android:textColor="@color/red"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingVertical="3dp"
        android:background="@color/white"
        android:text="@string/label_important_not_urgent"
        android:textColor="@color/orange"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:paddingVertical="3dp"
        android:text="@string/label_not_important_urgent"
        android:textColor="@color/blue"/>

    <TextView
        android:layout_width="match_parent"
        android:paddingVertical="3dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:text="@string/label_not_important_not_urgent"
        android:textColor="@color/green"/>


</LinearLayout>
