<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/content_view"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        style="@style/cardViewRelativeLayoutSelector"
        android:duplicateParentState="false">

        <android.support.v7.widget.AppCompatTextView
            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/pomodoro_setting_card_title"
            android:textColor="@color/text_color_notify"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/setting_pomodoro"
        style="@style/hintTextViewRelativeLayoutSelector"
        android:duplicateParentState="false">

        <com.time.cat.ui.widgets.HintTextView
            android:id="@+id/show_float_view_tv"
            style="@style/hintTextViewInLayoutLeft"
            app:hint="您可以设置番茄工作时长、休息时长等"
            app:msg="设置番茄时长"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/float_trigger_rl"
        style="@style/hintTextViewRelativeLayoutSelector"
        android:duplicateParentState="false">


        <com.time.cat.ui.widgets.HintTextView
            android:id="@+id/float_trigger_tv"
            style="@style/hintTextViewInLayoutLeft"
            app:hint="@string/pref_title_pomodoro_mode_summary"
            app:msg="@string/pref_title_pomodoro_mode"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/pref_key_pomodoro_mode"
            style="@style/hintTextViewswitchStyle"
            android:background="@null"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <RelativeLayout
        style="@style/hintTextViewRelativeLayoutSelector"
        android:duplicateParentState="false">


        <com.time.cat.ui.widgets.HintTextView
            style="@style/hintTextViewInLayoutLeft"
            app:hint="@string/pref_title_infinity_mode_summary"
            app:msg="@string/pref_title_infinity_mode"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/pref_key_infinity_mode"
            style="@style/hintTextViewswitchStyle"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <RelativeLayout
        style="@style/hintTextViewRelativeLayoutSelector"
        android:duplicateParentState="false">

        <com.time.cat.ui.widgets.HintTextView
            style="@style/hintTextViewInLayoutLeft"
            app:hint="@string/pref_title_ticking_sound_summary"
            app:msg="@string/pref_title_ticking_sound"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/pref_key_tick_sound"
            style="@style/hintTextViewswitchStyle"
            android:background="@null"
            android:checked="true"
            android:clickable="true"

            android:focusable="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/browser_setting"
        style="@style/cardViewRelativeLayoutSelector"
        android:duplicateParentState="false">

        <android.support.v7.widget.AppCompatTextView
            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/pref_title_use_notification"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/pref_key_use_notification"
            style="@style/switchStyle"
            android:background="@null"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"/>
    </RelativeLayout>

</LinearLayout>