<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/content_view"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/total_switch_rl"
        style="@style/cardViewRelativeLayoutSelector"
        android:duplicateParentState="false">

        <android.support.v7.widget.AppCompatTextView
            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/total_switch"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/total_switch_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/monitor_click_rl"
        style="@style/hintTextViewRelativeLayoutSelector"
        android:duplicateParentState="false">

        <com.time.cat.mvp.view.HintTextView
            android:id="@+id/monitor_click_tv"
            style="@style/hintTextViewInLayoutLeft"
            app:hint="@string/monitor_click_into"
            app:msg="@string/monitor_click"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/monitor_click_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/monitor_clipboard_rl"
        style="@style/cardViewRelativeLayoutSelector"
        android:duplicateParentState="false">

        <android.support.v7.widget.AppCompatTextView

            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/monitor_clipboard"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/monitor_clipboard_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/orc"
        style="@style/cardViewRelativeLayoutSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_line_height"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/ocr_picture"
            android:textColor="@color/primary_text"/>

    </RelativeLayout>

</LinearLayout>